<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewItemMonthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        app:cardElevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/MonthStatistics"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_22ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:background="@color/hintText" />

            <TextView
                android:id="@+id/tvTotalRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/inter"
                android:text="@string/TotalRequestStatistics"
                android:textColor="@color/sub_content"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvTripSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/inter"
                android:text="@string/TripSuccessStatistics"
                android:textColor="@color/sub_content"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvTotalCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/inter"
                android:text="@string/TotalCancelStatistics"
                android:textColor="@color/sub_content"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:src="@drawable/cancel_tree"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDriverCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/inter"
                        android:text="@string/DriverCancelStatistics"
                        android:textColor="@color/sub_content"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:id="@+id/tvPassengerCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/inter"
                        android:text="@string/PassengerCancelStatistics"
                        android:textColor="@color/sub_content"
                        android:textSize="@dimen/_14ssp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTotalDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/inter"
                android:text="@string/TotalDistanceStatistics"
                android:textColor="@color/sub_content"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvTotalDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/inter"
                android:text="@string/TotalDurationStatistics"
                android:textColor="@color/sub_content"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvTotalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/inter"
                android:text="@string/TotalIncomeStatistics"
                android:textColor="@color/sub_content"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>